# svatools

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  gazelle_python.yaml  lint.sh  requirements.in  requirements_lock.txt
assets/lint/: .flake8  BUILD.bazel
src/: BUILD.bazel  __init__.py  __main__.py
tools/: BUILD.bazel
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
tools/oci/: BUILD.bazel  py_layer.bzl
tools/server/: uvicorn.bzl
