
# -------------------------------------
# Copyright (c) 2024, Dror Kabely
# -------------------------------------
#

load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "src",
    srcs = ["__init__.py"],
    imports = [".."],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "src_bin",
    srcs = ["__main__.py"],
    imports = [".."],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
)

