# -------------------------------------
# Copyright (c) 2024, Dror Kabely
# -------------------------------------
#

load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
load("@pip//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])
